<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_tuijian"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_shequ"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notificayion_tiaoguoshu"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_fourth"
        android:icon="@drawable/ic_fourth_guoshuziying"
        android:title="@string/title_fourth" />

    <item
        android:id="@+id/navigation_fifth"
        android:icon="@drawable/ic_fifth_wode"
        android:title="@string/title_fifth" />

</menu>